<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shri.playkbcwithme.MainActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_intro"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tlIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal">

        <TableRow
            android:id="@+id/trIntro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/ibIntro1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/intro_1"
                app:srcCompat="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/ibIntro2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/intro_2"
                app:srcCompat="@android:drawable/ic_media_play" />

        </TableRow>

        <TableRow
            android:id="@+id/trIntrotv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvIntro1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intro_1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intro_2"
                android:textAlignment="center" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tvTitleNextQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:textAlignment="textStart"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tlNextQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TableLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ibNextAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/next_question"
            app:srcCompat="@android:drawable/ic_media_play" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNextQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_question"
            android:textAlignment="center" />
    </TableRow>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:text="@string/title_suspense"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tlSuspense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/trSuspenseIb"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibSuspense1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/suspense_1"
                app:srcCompat="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/ibSuspense2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/suspense_2"
                app:srcCompat="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/ibSuspense3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/suspense_3"
                app:srcCompat="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/ibSuspense4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/suspense_4"
                app:srcCompat="@android:drawable/ic_media_play" />
        </TableRow>

        <TableRow
            android:id="@+id/trSuspenseTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvSuspense1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/suspense_1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvSuspense2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/suspense_2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvSuspense3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/suspense_3"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvSuspense4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/suspense_4"
                android:textAlignment="center" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tvTitleQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_answer"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tlAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/trAnswerIb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ibLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/suspense_1"
                app:srcCompat="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/ibCorrectAns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/suspense_2"
                app:srcCompat="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/ibIncorrectAns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/suspense_3"
                app:srcCompat="@android:drawable/ic_media_play" />
        </TableRow>

        <TableRow
            android:id="@+id/trAnswerTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lock"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvCorrectAns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/correct_ans"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvIncorrectAns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/incorrect_ans"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tvTitleOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_other"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tlOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <TableRow
            android:id="@+id/trOtherIb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <ImageButton
                android:id="@+id/ibDramaticTone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/dramatic_tone"
                app:srcCompat="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/ibPhoneAFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/phone_a_friend"
                app:srcCompat="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/ibHooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/kbc_hooter"
                app:srcCompat="@android:drawable/ic_media_play" />

        </TableRow>

        <TableRow
            android:id="@+id/trOtherTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/tvDramaticTone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dramatic_tone"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvPhoneAFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_a_friend"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvHooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kbc_hooter"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>

</LinearLayout>
